Bugfixes; Remove /delete_game endpoint; Doc update
