# config/routes.rb
@@ -10,8 +10,7 @@ Rails.application.routes.draw do
       post 'start_game', to: 'games#start_game' # Token
       post 'submit_turn', to: 'games#submit_turn' # Token
       post 'exchange', to: 'games#exchange' # Token
-      post 'leave_game', to: 'games#leave_game'
-      delete 'delete/:game_id', to: 'games#delete'
+      post 'leave_game', to: 'games#leave_game' # Token
     end
   end
   # Define your application routes per the DSL in https://guides.rubyonrails.org/routing.html
